{
  "version": 4,
  "terraform_version": "1.6.3",
  "serial": 18,
  "lineage": "a4b8f5ca-8b89-dfc8-cb0c-6b6868f2d58b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851004817454:internet-gateway/igw-00a473927a4cc3f90",
            "id": "igw-00a473927a4cc3f90",
            "owner_id": "851004817454",
            "tags": {
              "Name": "test-igw"
            },
            "tags_all": {
              "Name": "test-igw"
            },
            "vpc_id": "vpc-007df84c93632dee3"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "test-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851004817454:route-table/rtb-0577d823fe45e8460",
            "id": "rtb-0577d823fe45e8460",
            "owner_id": "851004817454",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00a473927a4cc3f90",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-rt"
            },
            "tags_all": {
              "Name": "test-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-007df84c93632dee3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05988c51d619cbcba",
            "route_table_id": "rtb-0577d823fe45e8460",
            "subnet_id": "subnet-0760fd245ce870e82"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.test-rt",
            "aws_subnet.subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01b217005c62f8299",
            "route_table_id": "rtb-0577d823fe45e8460",
            "subnet_id": "subnet-0622d487a581e651c"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.test-rt",
            "aws_subnet.subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0011b9d9cdd89a5f1",
            "route_table_id": "rtb-0577d823fe45e8460",
            "subnet_id": "subnet-02e180b27103957f9"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.test-rt",
            "aws_subnet.subnets",
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03a7c0194a999c4a6",
            "route_table_id": "rtb-0577d823fe45e8460",
            "subnet_id": "subnet-0ab3195929804d510"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.test-rt",
            "aws_subnet.subnets",
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851004817454:security-group/sg-05ef4cab4f050b863",
            "description": "allow inbound and outbound",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow outbound rules",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05ef4cab4f050b863",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "allow inbound rules",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow all rules",
            "name_prefix": "",
            "owner_id": "851004817454",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-sg"
            },
            "tags_all": {
              "Name": "test-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-007df84c93632dee3"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851004817454:subnet/subnet-0ab3195929804d510",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab3195929804d510",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851004817454",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "testpublic-1"
            },
            "tags_all": {
              "Name": "testpublic-1"
            },
            "vpc_id": "vpc-007df84c93632dee3"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851004817454:subnet/subnet-0760fd245ce870e82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0760fd245ce870e82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851004817454",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "testpublic-2"
            },
            "tags_all": {
              "Name": "testpublic-2"
            },
            "vpc_id": "vpc-007df84c93632dee3"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851004817454:subnet/subnet-0622d487a581e651c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.20.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0622d487a581e651c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851004817454",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "testpublic-3"
            },
            "tags_all": {
              "Name": "testpublic-3"
            },
            "vpc_id": "vpc-007df84c93632dee3"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851004817454:subnet/subnet-02e180b27103957f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.20.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02e180b27103957f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "851004817454",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "testpublic-4"
            },
            "tags_all": {
              "Name": "testpublic-4"
            },
            "vpc_id": "vpc-007df84c93632dee3"
          },
          "dependencies": [
            "aws_vpc.test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:851004817454:vpc/vpc-007df84c93632dee3",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-013cb7feb84d0bdee",
            "default_route_table_id": "rtb-025207344009dda7d",
            "default_security_group_id": "sg-006c0342282956fca",
            "dhcp_options_id": "dopt-0d1747abb54f27339",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-007df84c93632dee3",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-025207344009dda7d",
            "owner_id": "851004817454",
            "tags": {
              "Name": "test"
            },
            "tags_all": {
              "Name": "test"
            }
          }
        }
      ]
    }
  ]
}